Bug 520758 - Spectacle sometimes doesn't save text to clipboard using the Extract Text feature and instead saves the whole image
Summary: Spectacle sometimes doesn't save text to clipboard using the Extract Text fea...
Status: RESOLVED FIXED
Alias: None
Product: Spectacle
Classification: Applications
Component: General (other bugs)
Version First Reported In: 6.6.90
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Noah Davis
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2026-05-28 13:54 UTC by cgik
Modified: 2026-06-04 16:51 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.7.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description cgik 2026-05-28 13:54:50 UTC
DESCRIPTION
Spectacle sometimes doesn't save text to clipboard using the Extract Text feature and instead saves the whole image (with saving images to clipboard after taking a screenshot option enabled)


STEPS TO REPRODUCE
1. Launch Spectacle (with saving images to clipboard after taking a screenshot option enabled in Configure Spectacle)
2. Choose a region to extract text from then use Extract Text
3. Try to paste the text

OBSERVED RESULT
Spectacle saves an image instead of the text that I want to extract

EXPECTED RESULT
Spectacle saves the text I chose.

SOFTWARE/OS VERSIONS
Operating System: Arch Linux
KDE Plasma Version: 6.6.90
KDE Frameworks Version: 6.26.0
Qt Version: 6.11.1

ADDITIONAL INFORMATION
Comment 1 Bug Janitor Service 2026-06-02 10:00:13 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/spectacle/-/merge_requests/545
Comment 2 Tobias Fella 2026-06-02 17:17:24 UTC
Git commit 5b2064f1fee8210429b77f2a244da32dfc793b21 by Tobias Fella, on behalf of Tobias Fella.
Committed on 02/06/2026 at 16:34.
Pushed by tfella into branch 'master'.

Don't automatically copy image to clipboard when performing OCR

Since that would just immediately overwrite the OCR result in the clipboard.

M  +1    -0    src/SpectacleCore.cpp

https://invent.kde.org/plasma/spectacle/-/commit/5b2064f1fee8210429b77f2a244da32dfc793b21