Don't automatically copy image to clipboard when performing OCR

Since that would just immediately overwrite the OCR result in the clipboard.

BUG: 520758
(cherry picked from commit 5b2064f1fee8210429b77f2a244da32dfc793b21)